# coal

./: .gitignore  BRANCH-REWRITE  CHALLENGES  COPYING  LICENSE  Makefile  Makefile.am  README  README.md  coal.c  coal.h  coal.pc.in  concurrent.c  concurrent.h  configure.ac  hierarchy.py  implementation.h  licenser.py  make_tar.sh  namespace.h
base/: MetaClass.h  Metaclass.h  Object.h  PACKAGE-BASE  String.h
base/MetaClass/: MetaClass.c  MetaClass.rep
base/Metaclass/: Metaclass.c  Metaclass.rep
base/Object/: Object.c  Object.rep
base/String/: String.c
base/Throwable/: Throwable.c  Throwable.rep
coal/: coal.c  coal.h  foreach.h  throw.c  try_catch.h
coal/abstract/: Abstract.h  AbstractError.h  AbstractInstantiationError.h  AbstractMethodError.h  PACKAGE-ABSTRACT
coal/abstract/Abstract/: Abstract.c  Abstract.rep.h
coal/abstract/AbstractError/: AbstractError.c
coal/abstract/AbstractInstantiationError/: AbstractInstantiationError.c
coal/abstract/AbstractMethodError/: AbstractMethodError.c
coal/base/: Metaclass.h  Object.h  String.h  Throwable.h
coal/base/Metaclass/: Metaclass.c  Metaclass.rep.h
coal/base/Object/: Object.c  Object.rep  Object.rep.h
coal/base/String/: String.c  String.rep  String.rep.h
coal/base/Throwable/: Throwable.c  Throwable.rep.h
coal/collections/: AbstractCollection.h  Collection.h  Iterable.h  Iterator.h  PACKAGE-COLLECTIONS
coal/collections/AbstractCollection/: AbstractCollection.c  AbstractCollection.rep.h
coal/collections/Collection/: Collection.c  Collection.rep.h
coal/collections/Iterable/: Iterable.c  Iterable.rep.h
coal/collections/Iterator/: Iterator.c  Iterator.rep.h
coal/error/: Error.h  Exception.h  NoSuchMethodError.h  NullPointerException.h  Throwable.h
coal/error/Error/: Error.c
coal/error/Exception/: Exception.c
coal/error/IllegalStateException/: IllegalStateException.c
coal/error/NoSuchMethodError/: NoSuchMethodError.c
coal/error/NullPointerException/: NullPointerException.c
coal/error/OutOfMemoryError/: OutOfMemoryError.c
coal/error/Throwable/: Throwable.c  Throwable.rep.h
coal/io/: PACKAGE-IO  io.c  io.h  printf.c
coal/parallel/: DeadlockException.h  PACKAGE-PARALLEL  Thread.h  cleanup.h
coal/parallel/DeadlockException/: DeadlockException.c
coal/parallel/Thread/: Thread.c  (+1 more)
coal/private/: PACKAGE-PRIVATE  atomic.h  branching.h  cdefs.h  cleanup_stack.c  cleanup_stack.h  collected.c  collected.h  exception_handling.h  foreach.h  function_pointer_stack.c  function_pointer_stack.h  library.h  memory.h  object_orientation.h  pointer_stack.c  pointer_stack.h  preprocessor.h  reference_counting.h  reference_type.h  stack.c  stack.h  thread_local.h  try_catch.c  try_catch.h  virtual_methods.c  virtual_methods.h
coal/testing/: AssertionError.h  PACKAGE-TESTING  assert.h
core/: atomic.h  cdefs.h  common.h  exceptions.c  exceptions.h  foreach.h  implementation.h  library.h  local.c  local.h  memory.c  memory.h  namespace.h  namespaces.h  object_orientation.h  reference_counting.h  threading.h  utilities.h  utility_mutex.h  utility_stack.h  virtual_methods.c  virtual_methods.h
core/classes/: subclass.h
error/: Error.h  Exception.h  IllegalStateException.h  NoSuchMethodError.h  NullPointerException.h  OutOfMemoryError.h  PACKAGE-ERROR
error/Error/: Error.c
error/Exception/: Exception.c
error/OutOfMemoryError/: OutOfMemoryError.c
io/: File.h  FileNotFoundException.h  IOException.h  io.c  io.h  namespace.h
io/File/: File.c  File.rep  File_iterator.c  File_iterator.rep
io/FileNotFoundException/: FileNotFoundException.c
io/IOException/: IOException.c
lang/: AbstractError.h  AbstractInstantiationError.h  AbstractMethodError.h  AbstractMethodException.h  Error.h  Exception.h  IllegalStateException.h  IndexOutOfBoundsException.h  NoSuchMethodError.h  NoSuchMethodException.h  NullPointerException.h  OutOfMemoryError.h  UnsupportedOperationException.h  abstract.h  iterable.h  metaclass.h  namespace.h  object.h  string.h  thread.h  throwable.h
lang/AbstractError/: AbstractError.c
lang/AbstractInstantiationError/: AbstractInstatiationError.c
lang/AbstractMethodError/: AbstractMethodError.c
lang/AbstractMethodException/: AbstractMethodException.c
lang/Error/: Error.c
lang/Exception/: Exception.c
lang/IllegalStateException/: IllegalStateException.c
lang/IndexOutOfBoundsException/: IndexOutOfBoundsException.c
lang/NoSuchMethodError/: NoSuchMethodError.c
lang/NoSuchMethodException/: NoSuchMethodException.c
lang/NullPointerException/: NullPointerException.c
lang/OutOfMemoryError/: OutOfMemoryError.c
lang/UnsupportedOperationException/: UnsupportedOperationException.c
lang/abstract/: abstract.c  abstract.rep
lang/iterable/: iterable.c  iterable.rep
lang/metaclass/: metaclass.c  metaclass.r  metaclass.rep
lang/object/: object.c  object.r  object.rep
lang/string/: string.c  string.rep  string_class.c  string_class.rep  string_iterator.c  string_iterator.rep  string_metaclass.c  string_metaclass.rep
lang/thread/: thread.c  thread.rep
lang/throwable/: metathrowable.rep  throwable.c  throwable.r  throwable.rep
m4/: cx_have_sync_atomics.m4
private/: atomic.h  cdefs.h  library.h  memory.c  memory.h  object_orientation.h  reference_counting.h  reference_type.h  virtual_methods.h
private/classes/: Subclass.h
py-utils/: .gitignore  DAG.py  dependencies.py  hierarchy.py  licenser.py  makefile.py  util.py
util/: AbstractCollection.h  AbstractList.h  ArrayList.h  BinaryTreeSet.h  TreeSet.h  collection.h  iterator.h  list.h
util/AbstractCollection/: AbstractCollection.c  AbstractCollection.rep
util/AbstractList/: AbstractList.c  AbstractList.rep
util/ArrayList/: ArrayList.c  ArrayList.rep  ArrayList_iterator.c  ArrayList_iterator.rep
util/BinaryTreeSet/: BinaryTreeSet.c  BinaryTreeSet.rep  BinaryTreeSet_iterator.c  BinaryTreeSet_iterator.rep
util/TreeSet/: TreeSet.c  TreeSet.rep  TreeSet_iterator.c  TreeSet_iterator.rep
util/collection/: collection.c  collection.rep
util/iterator/: iterator.c  iterator.rep
util/list/: list.c  list.rep
(+7 files in other folders)
